Increase installation timeout from 1 hour to 3 hours so that
a system built with DEBUG and LOCKDEBUG can be installed under
qemu without timing out.

Unconditionally print a greeting message including the version number
of startup, so that logs from automated anita runs will always
indicate the version used.

In --structured-log mode, log the string matched by expect() instead
of the return value, as the latter is always zero and therefore
conveys no useful information.

- 1.33 released -

Support recent versions of sysinst (CVS date 2014.08.03.16.09.38 or
newer), where set selection happens after disk partitioning rather
than before.

Document qemu 2.0.0nb4 as a known working version.

New command line option --structured-log.

- 1.32 released -

Fix installation of source and debug sets, which had been broken since
the label displayed by sysinst was changed from "Source sets" to
"Source and debug sets".

- 1.31 released -

Fix a failure to consume a shell prompt which would cause it to remain
buffered and later be mistaken for one that had not yet issued.  For
added protection, add a unique serial number to each prompt.

Omit drive index from qemu command line for backwards compatibility
with scripts written for anita 1.29 or older.

Fix X11 set names.

- 1.30 released -

Increase the default timeout for running the NetBSD test
suite from 2 hours to 3 hours.

Add support for installing the new "debug" set, and add a new
man page section on using anita for debugging NetBSD.

Organize the BUGS section of the man page into sections,
and add links to four more qemu 1.x regressions.

Add Kuya support, based on patch from Julio Merino.

New command line option "--version".

Support booting i386 and amd64 from boot-com.iso instead
of the boot floppies, attaching a second virtual CD-ROM drive
for the install sets.  Enable with "--boot-from cdrom".

Fix the Anita 1.2 backwards compatibility Release class.

- 1.29 released -

Fix "xm" Xen interface support broken in 1.28.
